2-0/default/data/steps/kgateway-labs/routing-rules/add-requestheader.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: httpbin
spec:
  parentRefs:
  - name: infra-gateway
    namespace: infra
    sectionName: httpbin-https
  rules:
  - filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
        - name: request-type
          value: external
    backendRefs:
    - name: httpbin
      port: 8000
