2-0/default/data/steps/kgateway-labs/routing-rules/reviews-endpoint.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookinfo-reviews
  namespace: bookinfo
spec:
  parentRefs:
  - name: infra-gateway
    namespace: infra
    sectionName: bookinfo-https
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /reviews
    backendRefs:
    - name: reviews
      port: 9080
