2-0/default/data/steps/kgateway-labs/routing-rules/setup-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: all-redirect-to-https
  namespace: infra
spec:
  hostnames:
  - "*.example.com"
  parentRefs:
  - name: infra-gateway
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
