2-0/default/data/steps/kgateway-labs/routing-rules/url-rewrite.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: httpbin
spec:
  parentRefs:
  - name: infra-gateway
    namespace: infra
    sectionName: httpbin-https
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /response-code
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /status
    backendRefs:
    - name: httpbin
      port: 8000
  - backendRefs:
    - name: httpbin
      port: 8000
